--- a/jhj-web-user/order/order-lib-cal.html
+++ b/jhj-web-user/order/order-lib-cal.html
@@ -3,27 +3,37 @@
 	<div data-page="order-lib-cal" class="page">
 		<div id="indexPageContentDiv" class="page-content">
 			<div class="beijing-index">
-				<div class="rilikongjian">
-					<p></p>
-					<ul class="rilikongjian1">
+				<div class="rilichange">
+					<div class="rilichange1">
+						<div class="rilichange1-1" id="calendar-year">2016</div>
+						<ul class="rilichange1-2" >
+							<li id='calendar-day-left'><span>&lt;</span></li>
+							<li id="calendar-month">九月</li>
+							<li id='calendar-day-right'><span>&gt;</span></li>
+						</ul>
+						<ul class="rilichange1-3" id="calendar-week">
+						</ul>
+					</div>
+					<ul class="rilichange1-4" id="calendar-day">
+						<li><p class="rilichange-day">1</p></li>
+						<li><p>2</p></li>
+						<li><p>3</p></li>
+						<li><p>4</p></li>
+						<li><p>5</p></li>
+						<li><p>6</p></li>
+						<li><p>7</p></li>
+					</ul>
+					<ul class="rilichange1-5" id="calendar-time">
+						<li class="rilichange-time">8:00</li>
 						<li>
-							<span style="padding-right: 10px;" id="rilikongjian1-left">〈</span>
-						</li>
-						<li id="rilikongjian1-month"></li>
-						<li>
-							<span style="padding-left: 10px;" id="rilikongjian1-right">〉</span>
+							<p>8:30</p>
+							<p>约满</p>
 						</li>
 					</ul>
-					<ul class="rilikongjian2" id="rilikongjian2-week">
-					</ul>
+					<div class="rilichange1-6">
+						<a href="#"><p class="rilichange1-6-2" id="all-button2">确定</p></a>
+					</div>
 				</div>
-				<ul class="rilikongjian3" id="rilikongjian3-day">
-				</ul>
-				<ul class="rilikongjian4" style="margin-top: 15px;" id="rilikongjian3-dateTime">
-				</ul>
-				<a href="#">
-					<div class="all-button11" id="all-button2">确定</div>
-				</a>
 			</div>
 		</div>
 	</div>
