--- a/jhj-web-user/index.html
+++ b/jhj-web-user/index.html
@@ -32,7 +32,7 @@
 						      	<a href="order/order-hour-index.html"><img src="img/indexthree/banner2.jpg" alt="" style="width: 100%; padding: 0;"></a>
 						      </div>
 						      <div class="swiper-slide">
-						      	<a href="active/twoyears-active-index.html"><img src="img/indexthree/banner1.jpg" alt="" style="width: 100%; padding: 0;"></a>
+						      	<a href="#"><img src="img/indexthree/banner1.jpg" alt="" style="width: 100%; padding: 0;"></a>
 						      </div>
 						    </div>
 						  </div>
