--- a/jhj-web-user/order/order-hour-index.html
+++ b/jhj-web-user/order/order-hour-index.html
@@ -19,7 +19,7 @@
 					<a href="order/order-hour-intro.html?service_type_id=68" >
 						<img src="img/jinpaibaojie/jinpai-index-2.png" alt="">
 						<p>基础保洁</p>
-						<p style="color: red/* #7ABFFA; */">特价99元</p>
+						<p style="color: #7ABFFA">会员价109元起</p>
 					</a>
 				</div>
 				<!-- <div class="jinpai-index">
