--- a/jhj-web-user/index.html
+++ b/jhj-web-user/index.html
@@ -25,7 +25,7 @@
 				<div data-page="index" class="page">
 					<div id="indexPageContentDiv" class="page-content" >
 						<!-- 轮播图 -->
-						  <div class="swiper-container swiper-init swiper-1" data-pagination=".swiper-pagination">
+						 <!--  <div class="swiper-container swiper-init swiper-1" data-pagination=".swiper-pagination">
 						    <div class="swiper-pagination"></div>
 						    <div class="swiper-wrapper">
 						      <div class="swiper-slide">
@@ -35,8 +35,8 @@
 						      	<a href="#"><img src="img/indexthree/banner1.jpg" alt="" style="width: 100%; padding: 0;"></a>
 						      </div>
 						    </div>
-						  </div>
-						
+						  </div> -->
+						<img src="img/indexthree/banner.png" alt="" style="width: 100%; padding: 0;">
 						<div class="beijing-index">
 							<div class="index-title">
 								<div class="index-title-1"></div>
@@ -46,7 +46,7 @@
 								<div class="mincircle mincircle1">
 									<div class="mincircle-one">
 										<p>家庭保洁</p>
-										<p>基础保洁大促99元</p>
+										<p>会员109元起</p>
 									</div>
 									<div class="mincircle-two">
 										<img src="img/indexthree/index-1.png" alt="">
