--- a/jhj-web-user/index1.html
+++ b/jhj-web-user/index1.html
@@ -22,7 +22,7 @@
 				<div data-page="index" class="page">
 					<div id="indexPageContentDiv" class="page-content">
 						<!-- 轮播图 -->
-						  <div class="swiper-container swiper-init swiper-1" data-pagination=".swiper-pagination">
+						  <!-- <div class="swiper-container swiper-init swiper-1" data-pagination=".swiper-pagination">
 						    <div class="swiper-pagination"></div>
 						    <div class="swiper-wrapper">
 						      <div class="swiper-slide">
@@ -32,8 +32,8 @@
 						      	<a href="#"><img src="img/indexthree/banner1.jpg" alt="" style="width: 100%; padding: 0;"></a>
 						      </div>
 						    </div>
-						  </div>
-						
+						  </div> -->
+						<img src="img/indexthree/banner.png" alt="" style="width: 100%; padding: 0;">
 						<div class="beijing-index">
 							<div class="index-title">
 								<div class="index-title-1"></div>
