--- a/jhj-web-user/index1.html
+++ b/jhj-web-user/index1.html
@@ -33,7 +33,7 @@
 						      </div>
 						    </div>
 						  </div> -->
-						<img src="img/indexthree/banner.png" alt="" style="width: 100%; padding: 0;">
+						<a href='order/order-hour-index.html'><img src="img/indexthree/banner3.jpg" alt="" style="width: 100%; padding: 0;"></a>
 						<div class="beijing-index">
 							<div class="index-title">
 								<div class="index-title-1"></div>
@@ -43,8 +43,8 @@
 								<div class="mincircle mincircle1">
 									<div class="mincircle-one">
 										<p>家庭保洁</p>
-										<p>原价149元</p>
-										<p>会员135起</p>
+										<p>3.8家务节</p>
+										<p>会员独享99元</p>
 									</div>
 									<div class="mincircle-two">
 										<img src="img/indexthree/index-1.png" alt="">
