--- a/jhj-web-user/index.html
+++ b/jhj-web-user/index.html
@@ -36,7 +36,7 @@
 						      </div>
 						    </div>
 						  </div> -->
-						<a href='order/order-hour-index.html'><img src="img/indexthree/banner3.jpg" alt="" style="width: 100%; padding: 0;"></a>
+						<a href='order/order-hour-index.html'><img src="img/indexthree/banner.jpg" alt="" style="width: 100%; padding: 0;"></a>
 						<div class="beijing-index">
 							<div class="index-title">
 								<div class="index-title-1"></div>
@@ -47,7 +47,7 @@
 									<div class="mincircle-one"> 
 										<p>家庭保洁</p>
 										<p>3.8家务节</p>
-										<p>会员独享99元</p>
+										<p>会员价109起</p>
 									</div>
 									<div class="mincircle-two">
 										<img src="img/indexthree/index-1.png" alt="">
