--- a/jhj-web-user/index1.html
+++ b/jhj-web-user/index1.html
@@ -33,7 +33,7 @@
 						      </div>
 						    </div>
 						  </div> -->
-						<a href='order/order-hour-index.html'><img src="img/indexthree/banner.jpg" alt="" style="width: 100%; padding: 0;"></a>
+						<a href='order/order-hour-index.html'><img src="img/indexthree/banner.png" alt="" style="width: 100%; padding: 0;"></a>
 						<div class="beijing-index">
 							<div class="index-title">
 								<div class="index-title-1"></div>
