--- a/jhj-web-user/index.html
+++ b/jhj-web-user/index.html
@@ -36,7 +36,7 @@
 						      </div>
 						    </div>
 						  </div> -->
-						<a href='order/order-hour-index.html'><img src="img/indexthree/banner.png" alt="" style="width: 100%; padding: 0;"></a>
+						<a href='user/charge/mine-charge-list.html'><img src="img/indexthree/banner1.png" alt="" style="width: 100%; padding: 0;"></a>
 						<div class="beijing-index">
 							<div class="index-title">
 								<div class="index-title-1"></div>
