--- a/jhj-web-user/order/order-rate-staff.html
+++ b/jhj-web-user/order/order-rate-staff.html
@@ -39,6 +39,7 @@
 					<p>个人介绍：</p>
 					<span>{intro}</span>
 				</div>
+				<div class="chongzhi5-kong1"></div>
 				<div class="all-button14" style=""><a href="#" onclick="reStaffOrder({staffId}, '{staffName}')" class="special-color7">预约她</a></div>
 				<div class="chongzhi5-kong1"></div>
 			</div>
