---再次预约页面

--- a/jhj-web-user/order/order-rate-staff.html
+++ b/jhj-web-user/order/order-rate-staff.html
@@ -35,7 +35,7 @@
 					<p>准时到达率：</p>
 					<span>{totalArrival}</span>
 				</div>
-				<div class="waiter7-1">
+				<div class="waiter7-1" style="height:auto;">
 					<p>个人介绍：</p>
 					<span>{intro}</span>
 				</div>
