--- a/jhj-web-user/order/order-rate-staff.html
+++ b/jhj-web-user/order/order-rate-staff.html
@@ -40,7 +40,9 @@
 					<span>{intro}</span>
 				</div>
 				<div class="chongzhi5-kong1"></div>
-				<div class="all-button14" style=""><a href="#" onclick="reStaffOrder({staffId}, '{staffName}')" class="special-color7">预约她</a></div>
+				<a href="#" onclick="reStaffOrder({staffId}, '{staffName}')" class="special-color7">
+					<div class="all-button14">预约她</div>
+				</a>
 				<div class="chongzhi5-kong1"></div>
 			</div>
 		</div>
