---基础保洁+油烟机+空调

--- a/jhj-web-user/html/order-jinpai-jichu.html
+++ b/jhj-web-user/html/order-jinpai-jichu.html
@@ -36,9 +36,29 @@
 									</ul>
 									
 									<ul class="shendu-bx-xd11">
-										<li>基础保洁</li>
-										<li>119元/3小时</li>
-										<li>109元/3小时</li>
+										<li style="font-size:12px;">基础保洁+中式油烟机</li>
+										<li>199元</li>
+										<li>199元</li>
+									</ul>
+									<ul class="shendu-bx-xd11">
+										<li style="font-size:12px;">基础保洁+挂式空调</li>
+										<li>199元</li>
+										<li>199元</li>
+									</ul>
+									<ul class="shendu-bx-xd11">
+										<li style="font-size:12px;">基础保洁+欧式油烟机</li>
+										<li>229元</li>
+										<li>229元</li>
+									</ul>
+									<ul class="shendu-bx-xd11">
+										<li style="font-size:12px;">基础保洁+侧吸油烟机</li>
+										<li>249元</li>
+										<li>249元</li>
+									</ul>
+									<ul class="shendu-bx-xd11">
+										<li style="font-size:12px;">基础保洁+柜式空调</li>
+										<li>249元</li>
+										<li>249元</li>
 									</ul>
 									<div class="shendu-bx-xd2">
 										充值立享会员价优惠&nbsp;》
