--- a/jhj-web-user/active/half-success.html
+++ b/jhj-web-user/active/half-success.html
@@ -1,7 +1,7 @@
 <div data-page="half-success"  class="page">
 	<div id="indexPageContentDiv" class="page-content">
 		<div class="beijing-index">
-			<img src="img/newYear/jinpai-half2.jpg" alt="" class="all-img">
+			<a href="order/order-hour-intro.html?service_type_id=28"><img src="img/newYear/jinpai-half2.jpg" alt="" class="all-img"></a>
 		</div>
 	</div>
 </div>
