--- a/jhj-web-user/index.html
+++ b/jhj-web-user/index.html
@@ -25,18 +25,18 @@
 				<div data-page="index" class="page">
 					<div id="indexPageContentDiv" class="page-content" >
 						<!-- 轮播图 -->
-						 <!--  <div class="swiper-container swiper-init swiper-1" data-pagination=".swiper-pagination">
+						<div class="swiper-container swiper-init swiper-1" data-pagination=".swiper-pagination">
 						    <div class="swiper-pagination"></div>
 						    <div class="swiper-wrapper">
 						      <div class="swiper-slide">
-						      	<a href="order/order-hour-index.html"><img src="img/indexthree/banner2.jpg" alt="" style="width: 100%; padding: 0;"></a>
+						      	<a href="order/order-hour-index.html"><img src="img/indexthree/banner4.jpg" alt="" style="width: 100%; padding: 0;"></a>
 						      </div>
 						      <div class="swiper-slide">
 						      	<a href="#"><img src="img/indexthree/banner1.jpg" alt="" style="width: 100%; padding: 0;"></a>
 						      </div>
 						    </div>
-						  </div> -->
-						<a href='user/charge/mine-charge-list.html'><img src="img/indexthree/banner1.png" alt="" style="width: 100%; padding: 0;"></a>
+						  </div>
+						<!-- <a href='user/charge/mine-charge-list.html'><img src="img/indexthree/banner1.png" alt="" style="width: 100%; padding: 0;"></a> -->
 						<div class="beijing-index">
 							<div class="index-title">
 								<div class="index-title-1"></div>
