--- a/jhj-web-user/index1.html
+++ b/jhj-web-user/index1.html
@@ -26,10 +26,10 @@
 						    <div class="swiper-pagination"></div>
 						    <div class="swiper-wrapper">
 						      <div class="swiper-slide">
-						      	<a href="order/order-hour-index.html"><img src="img/indexthree/banner4.jpg" alt="" style="width: 100%; padding: 0;"></a>
+						      	<a href="order/zuhetaocan.html"><img src="img/indexthree/banner4.jpg" alt="" style="width: 100%; padding: 0;"></a>
 						      </div>
 						      <div class="swiper-slide">
-						      	<a href="#"><img src="img/indexthree/banner1.jpg" alt="" style="width: 100%; padding: 0;"></a>
+						      	<a href="user/charge/mine-charge-list.html"><img src="img/indexthree/banner1.png" alt="" style="width: 100%; padding: 0;"></a>
 						      </div>
 						    </div>
 						  </div>
