--- a/jhj-web-user/user/coupon/mine-coupon-list.html
+++ b/jhj-web-user/user/coupon/mine-coupon-list.html
@@ -39,7 +39,7 @@
 					      		 <img src="img/icons/youhuiquan-huafei.png" alt=""style="height:30px; margin-top: 8px;">
 					      {{/js_compare}}
 				      	
-				      		<p style="margin-top:-56px;font-size:26px"> ￥{{value}}</p>	
+				      		<p style="margin-top:-56px;"> ￥{{value}}</p>	
 				        </div>
 				        <div class="col-66">
 				        	
