--- a/jhj-web-user/user/user-coupons.html
+++ b/jhj-web-user/user/user-coupons.html
@@ -7,7 +7,7 @@
             	<div class="youhuiquan" id="mine-coupons-use">
 	                <div class="youhuiquan1">￥</div>
 	                <b id="coupons-status">{status}</b>
-	                <div class="youhuiquan2">{value}</div>
+	                <div class="youhuiquan2" style="font-size:26px">{value}</div>
 	                <p>{service_type_name}</p>
 	                <div class="youhuiquan8">{maxvalue}</div>
 	                <div class="youhuiquan3">{from_date_str}至{to_date_str}</div>
