--- a/jhj-web-user/index1.html
+++ b/jhj-web-user/index1.html
@@ -28,9 +28,9 @@
 						      <div class="swiper-slide">
 						      	<a href="order/zuhetaocan.html"><img src="img/indexthree/banner4.jpg" alt="" style="width: 100%; padding: 0;"></a>
 						      </div>
-						      <div class="swiper-slide">
+						     <!--  <div class="swiper-slide">
 						      	<a href="user/charge/mine-charge-list.html"><img src="img/indexthree/banner1.png" alt="" style="width: 100%; padding: 0;"></a>
-						      </div>
+						      </div> -->
 						    </div>
 						  </div>
 						<!-- <a href='user/charge/mine-charge-list.html'><img src="img/indexthree/banner1.png" alt="" style="width: 100%; padding: 0;"></a> -->
