--- a/jhj-web-user/index.html
+++ b/jhj-web-user/index.html
@@ -29,11 +29,11 @@
 						    <div class="swiper-pagination"></div>
 						    <div class="swiper-wrapper">
 						      <div class="swiper-slide">
+						      	<a href="#"><img src="img/indexthree/banner5.jpg" alt="" style="width: 100%; padding: 0;"></a>
+						      </div>
+						      <div class="swiper-slide">
 						      	<a href="order/zuhetaocan.html"><img src="img/indexthree/banner4.jpg" alt="" style="width: 100%; padding: 0;"></a>
 						      </div>
-						      <!-- <div class="swiper-slide">
-						      	<a href="user/charge/mine-charge-list.html"><img src="img/indexthree/banner1.png" alt="" style="width: 100%; padding: 0;"></a>
-						      </div> -->
 						    </div>
 						  </div>
 						<!-- <a href='user/charge/mine-charge-list.html'><img src="img/indexthree/banner1.png" alt="" style="width: 100%; padding: 0;"></a> -->
