--- a/jhj-web-user/index1.html
+++ b/jhj-web-user/index1.html
@@ -24,13 +24,13 @@
 						<!-- 轮播图 -->
 						 <div class="swiper-container swiper-init swiper-1" data-pagination=".swiper-pagination">
 						    <div class="swiper-pagination"></div>
-						    <div class="swiper-wrapper">
+						     <div class="swiper-wrapper">
+						      <div class="swiper-slide">
+						      	<a href="#"><img src="img/indexthree/banner5.jpg" alt="" style="width: 100%; padding: 0;"></a>
+						      </div>
 						      <div class="swiper-slide">
 						      	<a href="order/zuhetaocan.html"><img src="img/indexthree/banner4.jpg" alt="" style="width: 100%; padding: 0;"></a>
 						      </div>
-						     <!--  <div class="swiper-slide">
-						      	<a href="user/charge/mine-charge-list.html"><img src="img/indexthree/banner1.png" alt="" style="width: 100%; padding: 0;"></a>
-						      </div> -->
 						    </div>
 						  </div>
 						<!-- <a href='user/charge/mine-charge-list.html'><img src="img/indexthree/banner1.png" alt="" style="width: 100%; padding: 0;"></a> -->
