---金牌保洁===》洁癖虫保洁

--- a/jhj-web-user/order/order-hour-index.html
+++ b/jhj-web-user/order/order-hour-index.html
@@ -11,7 +11,7 @@
 				<div class="jinpai-index">
 					<a href="order/order-hour-intro.html?service_type_id=28" >
 						<img src="img/jinpaibaojie/jinpai-index-1.png" alt="">
-						<p>金牌保洁</p>
+						<p>洁癖虫保洁</p>
 						<p style="color: #7ABFFA;">会员135元起</p>
 					</a>
 				</div>
