--- a/jhj-web-user/order/order-hour-intro.html
+++ b/jhj-web-user/order/order-hour-intro.html
@@ -15,7 +15,7 @@
 							<li>会员价</li>
 						</ul>
 						<ul class="shendu-bx-xd11">
-							<li id="serviceTypeNameStr">金牌保洁</li>
+							<li id="serviceTypeNameStr">洁癖虫保洁</li>
 							<li id="ppriceStr">149元/3小时</li>
 							<li id="mppriceStr">135元/3小时</li>
 						</ul>
