--- a/jhj-web-user/index.html
+++ b/jhj-web-user/index.html
@@ -310,6 +310,9 @@
 	<!-- 周年庆活动领取优惠券 -->
 	<script type="text/javascript" src="js/active/twoyears-active-coupons.js"></script>
 	
+	<script type="text/javascript" src="js/active/wuye-active.js"></script>
+	<script type="text/javascript" src="js/active/active-ad.js"></script>
+	
 	<script>
 		var _hmt = _hmt || [];
 		(function() {
