--- a/jhj-web-user/html/order-old-tiexinjiashi.html
+++ b/jhj-web-user/html/order-old-tiexinjiashi.html
@@ -171,17 +171,17 @@
 										<p>服务优势</p>
 									</div>
 									<img src="../img/wengjiajie/1.jpg" alt="" class="all-img8">
-									<p id="muyin5">
+									<p class="muyin5">
 										专业——专业的护理团队、技能培训，运用自身专业的护理经验防止家庭老年人及婴幼儿造成意外伤害
 									</p>
 									<div class="chongzhi5-kong2"></div>
-									<p id="muyin2" style="margin-top:25px;">
+									<p class="muyin2" style="margin-top:25px;">
 										专注——专注沟通陪伴，通过长期专业沟通、陪护能力来照料老年人，从而改善空巢老人长期孤独产生的性格孤僻等性格
 									</p>
 									<img src="../img/wengjiajie/3.jpg" alt="" class="all-img9">
 									<div class="chongzhi5-kong2"></div>
 									<img src="../img/wengjiajie/2.jpg" alt="" class="all-img8">
-									<p id="muyin5">
+									<p class="muyin5">
 										保障——依靠自身的专业房屋管理经验来抵抗各种风险，从而达到双方互惠互利,共同增值的目的等等
 									</p>
 									<div class="chongzhi5-kong2"></div>
