--- a/jhj-web-user/order/deepIntro/order-deep-intro-60.html
+++ b/jhj-web-user/order/deepIntro/order-deep-intro-60.html
@@ -5,6 +5,7 @@
     </div>
     <p class="special-color1">温馨提示：</p>
     <p class="special-color1">使用超过一年的洗衣机，建议进行彻底清洁</p>
+    <p class="special-color1">洗衣机拆开是指将洗衣机波轮转盘和滚筒内胆拆开进行清洗，因较耗费时间和需要专业技能，故比免拆价格要高</p>
     <p>洗衣机清洗的好处 </p>
     <p>定期对洗衣机进行清洗杀菌保养能及时有效清除掉洗衣机槽及内部各种污垢、纤维尘埃和各种有害细菌，能有效避免衣物的二次污染，防止各种有害细菌的传播，避免皮肤病、妇科病等传染性疾病的发生几率。</p>
 </div>
