---官网添加公司名称，地址，电话

--- a/ROOT/index.html
+++ b/ROOT/index.html
@@ -76,6 +76,7 @@
 			<li class="special-color3">关注叮当到家微信公众号</li>
 			<li class="special-color3">享更多优惠</li>
 			<li class="special-color3">咨询热线：010-53511197</li>
+			<li class="special-color3">家和家网络信息有限公司</li>
 		</ul>
 		<div class="index-shouye7">
 			<ul class="index-shouye7-1">
@@ -92,7 +93,7 @@
 					<li>加入我们</li>
 				</a>
 			</ul>
-			<p class="index-shouye7-2">备案号：京ICP15038422号-1</p>
+			<p class="index-shouye7-2">备案号：京ICP15038422号-1&nbsp;&nbsp;&nbsp;&nbsp;地址:北京市海淀区汉荣家园2号楼1607</p>
 		</div>
 	</div>
 	<!-- 在线客服代码 -->
