--- a/ROOT/jiaruwomen.html
+++ b/ROOT/jiaruwomen.html
@@ -45,7 +45,7 @@
 		</ul>
 		<div class="shichanghezuo-neirong2">
 			<h5>【公司简介】</h5>
-			<p><a href="www.jia-he-jia.com" style="font-size:16px;">叮当到家</a>是家和家网络信息有限公司旗下品牌。</p>
+			<p><a href="www.jia-he-jia.com" style="font-size:16px;">叮当到家</a>是<b style="font-size:16px;">家和家网络信息有限公司</b>旗下品牌。</p>
 			<p><a href="www.jia-he-jia.com" style="font-size:16px;">叮当到家</a>是以提供家务包年的服务形式，通过个性化家庭服务定制平台，以一键定制、全年即可享受按时按需的包年服务，坐享服务到家，让家庭远离家务。</p>
 			<p>公司在业内首个实施，以通过“移动平台+主云门店系统+家庭助理团队”三位一体的三角业务模式，为中高端家庭用户提供品类齐全的服务，包含家政服务包、贴心家事包、超值免费包，基本涵盖各项家庭需求，是家庭专属的家务助手。</p>
 			<p>公司对服务人员进行持久的服务素质培养，通过礼仪培训、技能培训等，保障服务人员具有较高的行业服务水准。</p>
@@ -54,6 +54,7 @@
 				<p>变零散服务为包年服务</p>
 				<p>变单人服务为团队服务</p>
 				<p>变普通服务为高逼格服务</p>
+				<p>公司地址:北京市海淀区汉荣家园2号楼1607</p>
 			<h5>【招聘职位】</h5>
 			<ul class="jiaruwomen-zhiwei">
 				<h5>店长</h5>
