--- a/ROOT/zaixianfankui.html
+++ b/ROOT/zaixianfankui.html
@@ -46,9 +46,9 @@
 			<a href="jiaruwomen.html"><li>加入我们</li></a>
 		</ul>
 		<ul class="shichanghezuo-neirong2">
-			<li>如您有任何疑问，可通过邮箱或QQ联系我们，我们将尽快给您反馈。</li>
-			<li>邮箱:<b style="color:#F07C01">ludenghui@jia-he-jia.com</b></li>
-			<li>QQ:<b style="color:#F07C01">1530302620</b></li>
+			<li>如您有任何疑问，可通过客服电话联系我们，我们将尽快给您反馈。</li>
+			<li>咨询热线:<b style="color:#F07C01">010-53511197</b></li>
+			
 		</ul>
 		
 	</div>
