--- a/ROOT/zaixianfankui.html
+++ b/ROOT/zaixianfankui.html
@@ -48,6 +48,8 @@
 		<ul class="shichanghezuo-neirong2">
 			<li>如您有任何疑问，可通过客服电话联系我们，我们将尽快给您反馈。</li>
 			<li>咨询热线:<b style="color:#F07C01">010-53511197</b></li>
+			<li>公司地址:<b style="color:#F07C01">北京市海淀区汉荣家园2号楼1607</b></li>
+			<li>公司名称:<b style="color:#F07C01">家和家网络信息有限公司</b></li>
 			
 		</ul>
 		
