--- a/jhj-web-user/index.html
+++ b/jhj-web-user/index.html
@@ -313,6 +313,10 @@
 	<script type="text/javascript" src="js/active/wuye-active.js"></script>
 	<script type="text/javascript" src="js/active/active-ad.js"></script>
 	
+	<!-- 定制 -->
+	<script type="text/javascript" src="js/period/period-order.js"></script>
+	<script type="text/javascript" src="js/period/period_service_addons.js"></script>
+	
 	<script>
 		var _hmt = _hmt || [];
 		(function() {
