--- a/jhj-web-user/order/period/period-order.html
+++ b/jhj-web-user/order/period/period-order.html
@@ -8,13 +8,13 @@
             </div>
             <div class="housework1">
                 <div class="housework1-1">
-                    <div class="housework1-1-one" id="">定制价：10450元</div>
+                    <div class="housework1-1-one" id="period-price">定制价：10450元</div>
                     <div class="housework1-1-two">
-                        <p class="housework1-1-two-1" id="">总价：12638元</p>
-                        <p id="">为您节省：2188元</p>
+                        <p class="housework1-1-two-1" id="total-price">总价：12638元</p>
+                        <p id="total-pprice">为您节省：2188元</p>
                     </div>
                 </div>
-                <a href="order/period/period-order-pay.html">
+                <a href="#">
                     <div class="housework1-2">结算</div>
                 </a>
             </div>
