--- a/jhj-web-user/index.html
+++ b/jhj-web-user/index.html
@@ -316,6 +316,7 @@
 	<!-- 定制 -->
 	<script type="text/javascript" src="js/period/period-order.js"></script>
 	<script type="text/javascript" src="js/period/period_service_addons.js"></script>
+	<script type="text/javascript" src="js/period/period-order-pay.js"></script>
 	
 	<script>
 		var _hmt = _hmt || [];
