--- a/jhj-web-user/order/fiveservice/order-cus-index.html
+++ b/jhj-web-user/order/fiveservice/order-cus-index.html
@@ -1,24 +1,111 @@
-<div class="pages navbar-through toolbar-through">
-    <div data-page="order-cus-index" class="page">
-        <div id="indexPageContentDiv" class="page-content" style="background:#fff;">
-            <img src="img/jiawubaoyue/baoyuebanner.png" alt="" class="all-img">
-            <div class="order-baoyue">
-                <ul class="order-baoyue1">
-                    <li>
-                        <a href="survey/survey-user.html"><div>家务<br>包年</div></a>
-                    </li>
-                    <li>
-                         <a href="order/fiveservice/order-cus-hostwork-month.html"><div>家务<br>包月</div></a>
-                    </li>
-                    <li>
-                        <a href="order/fiveservice/orde-cook-intro.html"><div>厨娘<br>烧饭</div></a>
-                    </li>
-                </ul>
-                <ul class="order-baoyue2">
-                     <a href="survey/survey-user.html"><li>一键定制</li></a>
-                    <a href="order/fiveservice/order-cus-hostwork-month.html"><li>499元</li></a>
-                    <a href="order/fiveservice/orde-cook-intro.html"><li>99元</li></a>
-                </ul>
+<div data-page="order-cus-index" class="page">
+    <div id="indexPageContentDiv" class="page-content">
+        <img src="img/taocan/taocan-list1.jpg" alt="" class="all-img">
+        <div class="dingzhi-list1">
+            <a href="order/period/period-order.html?package_type_id=1">
+                <div class="dingzhi-list1-1">
+                    <p class="special-color9">套餐一</p>
+                    <div class="dingzhi-list1-1-1">
+                        <img src="img/taocan/taocan-list2.jpg" alt="">
+                        <p>星级·品质生活套餐</p>
+                    </div>
+                    <p class="special-color10">￥6760元起</p>
+                </div>
+            </a>
+
+            <a href="order/period/period-order.html?package_type_id=2">
+                <div class="dingzhi-list1-1">
+                    <p class="special-color9">套餐二</p>
+                    <div class="dingzhi-list1-1-1">
+                        <img src="img/taocan/taocan-list3.jpg" alt="">
+                        <p>星级·极致享受套餐</p>
+                    </div>
+                    <p class="special-color10">￥3380元起</p>
+                </div>
+            </a>
+
+            <a href="order/period/period-order.html?package_type_id=3">
+                <div class="dingzhi-list1-1">
+                    <p class="special-color9">套餐三</p>
+                    <div class="dingzhi-list1-1-1">
+                        <img src="img/taocan/taocan-list4.jpg" alt="">
+                        <p>星级·品质生活套餐</p>
+                    </div>
+                    <p class="special-color10">￥1690元起</p>
+                </div>
+            </a>
+            <a href="order/period/period-order.html?package_type_id=4">
+                <div class="dingzhi-list1-1">
+                    <p class="special-color9">套餐四</p>
+                    <div class="dingzhi-list1-1-1">
+                        <img src="img/taocan/taocan-list5.jpg" alt="">
+                        <p>星级·品质生活套餐</p>
+                    </div>
+                    <p class="special-color10">￥780元起</p>
+                </div>
+            </a>
+        </div>
+        <div class="beijing-index">
+            <div class="shendu-bx">
+                <div class="shendu-title" style="clear:both;margin-top:5px;"></div>
+                <p>家务包年是一款专门为中高端家庭用户量身定制的项目，通过一键定制，全年即可享受按时按需的套餐服务，坐享服务到家，让生活远离家务。</p>
+                <div class="chongzhi5-kong2"></div>
+            </div>
+            <div class="shendu-bx">
+                <div class="shendu-title" style="clear:both;margin-top:10px;">
+                    <div class="shendu-title-1"></div>
+                    <p>6区78项服务</p>
+                </div>
+                <img src="img/taocan/taocan-list6.png" alt="" class="all-img4">
+                <img src="img/taocan/taocan-list7.png" alt="" class="all-img4">
+                <img src="img/taocan/taocan-list8.png" alt="" class="all-img4">
+                <img src="img/taocan/taocan-list9.png" alt="" class="all-img4">
+                <img src="img/taocan/taocan-list10.png" alt="" class="all-img4">
+                <img src="img/taocan/taocan-list11.png" alt="" class="all-img4">
+                <div class="chongzhi5-kong2"></div>
+            </div>
+            <div class="shendu-bx">
+                <div class="shendu-title" style="clear:both;margin-top:10px;">
+                    <div class="shendu-title-1"></div>
+                    <p>108项服务标准</p>
+                </div>
+                <img src="img/taocan/taocan-list12.png" alt="" class="all-img12">
+            </div>
+            <div class="shendu-bx">
+                <div class="shendu-title" style="clear:both;margin-top:10px;">
+                    <div class="shendu-title-1"></div>
+                    <p>专业的服务唯有专业的工具</p>
+                </div>
+                <img src="img/taocan/taocan-list13.png" alt="" class="all-img12">
+            </div>
+            <div class="shendu-bx">
+                <div class="shendu-title" style="clear:both;margin-top:10px;">
+                    <div class="shendu-title-1"></div>
+                    <p>进口工具组</p>
+                </div>
+                <img src="img/taocan/taocan-list14.png" alt="" class="all-img12">
+            </div>
+            <div class="shendu-bx">
+                <div class="shendu-title" style="clear:both;margin-top:10px;">
+                    <div class="shendu-title-1"></div>
+                    <p>三大保障</p>
+                </div>
+                <div class="dingzhi-list2">
+                    <img src="img/taocan/taocan-list15.png" alt="" class="all-img13">
+                </div>
+                <div class="dingzhi-list2"><img src="img/taocan/taocan-list16.png" alt="" class="all-img14"></div>
+                <div class="dingzhi-list2"><img src="img/taocan/taocan-list17.png" alt="" class="all-img14"></div>
+                <div class="dingzhi-list2"><img src="img/taocan/taocan-list18.png" alt="" class="all-img13"></div>
+                <div class="dingzhi-list2"><img src="img/taocan/taocan-list19.png" alt="" class="all-img13"></div>
+                <div class="dingzhi-list2"><img src="img/taocan/taocan-list20.png" alt="" class="all-img14"></div>
+                <div class="chongzhi5-kong2"></div>
+            </div>
+            <div class="shendu-bx">
+                <div class="shendu-title" style="clear:both;margin-top:10px;">
+                    <div class="shendu-title-1"></div>
+                    <p>优秀服务团队</p>
+                </div>
+                <img src="img/taocan/taocan-list21.png" alt="" class="all-img12">
             </div>
         </div>
     </div>
