--- a/jhj-web-user/order/period/period-order-pay.html
+++ b/jhj-web-user/order/period/period-order-pay.html
@@ -4,7 +4,7 @@
 		<div id="indexPageContentDiv" class="page-content">
 			<input type="hidden" id="userId" name="userId" value="0">
 			<input type="hidden" id="restMoney" name="restMoney" value="0">
-			<input type="hidden" id="orderId" name="orderId" value="">
+			<input type="hidden" id="orderNo" name="orderNo" value="">
 			<input type="hidden" id="userCouponId" name="userCouponId" value="0">
 			<input type="hidden" id="userCouponValue" name="userCouponValue" value="0">
 			<input type="hidden" id="orderPay" name="orderPay" value="0">
