--- a/jhj-web-user/order/period/period-order.html
+++ b/jhj-web-user/order/period/period-order.html
@@ -93,12 +93,12 @@
                                     <div class="housework-8 add-num">+</div>
                                 </div>
                             </div>
-                            <div class="item-subtitle">
+                            <!-- <div class="item-subtitle">
                                 <ul class="housework-4">
-                                    <li>总次数<b>52</b>次</li>
-                                    <li>频次<b>2</b>次/周</li>
+                                    <li>总次数<b>{serviceTypeAddonsNum}</b>次</li>
+                                    <li>频次<b>{addonsNum}</b>{addonsUnit}</li>
                                 </ul>
-                            </div>
+                            </div> -->
                             <div class="item-subtitle">
                                 <ul class="housework-5">
                                     <li class="housework-5-1">原价:￥<span class="price">{price}</span></li>
