--- a/jhj-web-user/index.html
+++ b/jhj-web-user/index.html
@@ -315,6 +315,7 @@
 	
 	<!-- 定制 -->
 	<script type="text/javascript" src="js/period/period-order.js"></script>
+	<script type="text/javascript" src="js/period/period-order-confirm.js"></script>
 	<script type="text/javascript" src="js/period/period-order-pay.js"></script>
 	
 	<script>
