--- a/jhj-web-user/order/period/period-order.html
+++ b/jhj-web-user/order/period/period-order.html
@@ -13,7 +13,7 @@
                         <p id="total-pprice">为您节省：<span>0</span>元</p>
                     </div>
                 </div>
-                <a href="#">
+                <a href="order/period/period-order-confirm.html">
                     <div id="balance-account" class="housework1-2">结算</div>
                 </a>
             </div>
