--- a/jhj-web-user/html/wuye-huodong.html
+++ b/jhj-web-user/html/wuye-huodong.html
@@ -3,14 +3,11 @@
 	<div class="page-content">
 		<div class="beijing-index">
 			<div style="width:100%;">
-				<img src="../img/active/property-1.jpg" alt="" class="all-img">
-				<a href=""><img src="../img/active/property-2.jpg" alt="" class="all-img11"></a>
-				<a href=""><img src="../img/active/property-3.jpg" alt="" class="all-img11"></a>
-				<a href=""><img src="../img/active/property-4.jpg" alt="" class="all-img11"></a>
-				<a href=""><img src="../img/active/property-5.jpg" alt="" class="all-img11"></a>
-				<a href=""><img src="../img/active/property-6.jpg" alt="" class="all-img11"></a>
-				<a href=""><img src="../img/active/property-7.jpg" alt="" class="all-img11"></a>
-				<img src="../img/active/property-8.jpg" alt="" class="all-img10">
+				<img src="../img/active/wuyi-1.jpg" alt="" class="all-img">
+				<a href=""><img src="../img/active/wuyi-2.jpg" alt="" class="all-img11"></a>
+				<a href=""><img src="../img/active/wuyi-3.jpg" alt="" class="all-img11"></a>
+				<a href=""><img src="../img/active/wuyi-4.jpg" alt="" class="all-img11"></a>
+				<img src="../img/active/wuyi-5.jpg" alt="" class="all-img10">
 			</div>
 		</div>
 	</div>
