--- a/jhj-web-user/order/order-deep-index.html
+++ b/jhj-web-user/order/order-deep-index.html
@@ -67,6 +67,18 @@
                         <p>地板保养打蜡</p>
                     </a>
                 </div>
+                <div class="shendu-circle">
+                    <a href="order/order-deep-intro.html?service_type_id=52" class="special-color7">
+                        <img src="img/shendu/shendu-11.png" alt="">
+                        <p>微波炉</p>
+                    </a>
+                </div>
+                <div class="shendu-circle">
+                    <a href="order/order-deep-intro.html?service_type_id=52" class="special-color7">
+                        <img src="img/shendu/shendu-12.png" alt="">
+                        <p>电烤箱</p>
+                    </a>
+                </div>
             </div>
         </div>
     </div>
