--- a/jhj-web-user/order/order-hour-index.html
+++ b/jhj-web-user/order/order-hour-index.html
@@ -22,22 +22,18 @@
 						<p style="color: #7ABFFA">会员价109元起</p>
 					</a>
 				</div>
-				<!-- <div class="jinpai-index">
-					<a href="order/order-hour-intro.html?service_type_id=69" >
-						<img src="img/jinpaibaojie/jinpai-index-3.png" alt="">
-						<p>特惠日基础保洁</p>
-						<p style="color: #7ABFFA;">会员105元起</p>
-						<p style="color: #7ABFFA;">限周一到周三使用</p>
+				<div class="jinpai-index">
+					<a href="order/fiveservice/order-cus-hostwork-month.html" >
+						<img src="img/jinpaibaojie/jinpai-index-5.png" alt="">
+						<p>家务包月</p>
 					</a>
 				</div>
 				<div class="jinpai-index">
-					<a href="order/order-hour-intro.html?service_type_id=70" >
-						<img src="img/jinpaibaojie/jinpai-index-4.png" alt="">
-						<p>特惠日金牌保洁</p>
-						<p style="color: #7ABFFA;">会员129元起</p>
-						<p style="color: #7ABFFA;">限周一到周三使用</p>
+					<a href="order/fiveservice/orde-cook-intro.html" >
+						<img src="img/jinpaibaojie/jinpai-index-6.png" alt="">
+						<p>厨娘烧饭</p>
 					</a>
-				</div> -->
+				</div>
 			</div>
 		</div>
 	</div>
