--- a/jhj-web-user/order/period/period-order.html
+++ b/jhj-web-user/order/period/period-order.html
@@ -78,7 +78,7 @@
                         <input type="hidden" name="price1" id="price1" value="{price}"/>
                         <input type="hidden" name="pprice" id="pprice" value="{pprice}"/>
                         <input type="hidden" name="serviceTypeId" value="{serviceTypeId}"/>
-                        <input type="radio" name="serviceTypeAddons" value="{serviceTypeAddonsId}"/>
+                        <input type="radio" name="serviceTypeAddons" value="{serviceTypeAddonsId}" {checked} />
                         <div class="item-media"><i class="icon icon-form-checkbox"></i></div>
                         <div class="housework-1">
                             <img src="img/taocan/jiawu-3.png" alt="">
