--- a/jhj-web-user/order/period/period-order-pay.html
+++ b/jhj-web-user/order/period/period-order-pay.html
@@ -5,15 +5,13 @@
 			<input type="hidden" id="userId" name="userId" value="0">
 			<input type="hidden" id="restMoney" name="restMoney" value="0">
 			<input type="hidden" id="orderNo" name="orderNo" value="">
-			<input type="hidden" id="userCouponId" name="userCouponId" value="0">
-			<input type="hidden" id="userCouponValue" name="userCouponValue" value="0">
 			<input type="hidden" id="orderPay" name="orderPay" value="0">
 			<input type="hidden" id="orderPayType" name="orderPayType" value="2">
 			<div class="beijing-index">
-				<ul class="order-pay">
+				<!-- <ul class="order-pay">
 					<li>已优惠</li>
 					<li id="userCouponValueStr">0元</li>
-				</ul>
+				</ul> -->
 				<ul class="order-pay1">
 					<li class="special-color4">支付全款金额</li>
 					<li class="special-color3" id="orderMoneyStrLi">￥0元</li>
@@ -41,7 +39,7 @@
 						</li>
 						<li>微信支付</li>
 						<li>
-							<img id="img-wxpay" onclick="changePayType('img-wxpay', 2)" src="img/dingdan-pay/dingdan-pay1.png" alt="">
+							<img id="img-wxpay"  src="img/dingdan-pay/dingdan-pay1.png" alt="">
 						</li>
 					</ul>
 					<ul id="select-alipay" class="xiadan11" style="border: 0;">
@@ -50,7 +48,7 @@
 						</li>
 						<li style="width:30%">支付宝支付</li>
 						<li style="width:48%">
-							<img id="img-alipay" onclick="changePayType('img-alipay', 1)" src="img/dingdan-pay/dingdan-pay2.png" alt="">
+							<img id="img-alipay"  src="img/dingdan-pay/dingdan-pay2.png" alt="">
 						</li>
 					</ul>
 				</div>
