--- a/jhj-web-user/index.html
+++ b/jhj-web-user/index.html
@@ -317,6 +317,7 @@
 	<script type="text/javascript" src="js/period/period-order.js"></script>
 	<script type="text/javascript" src="js/period/period-order-confirm.js"></script>
 	<script type="text/javascript" src="js/period/period-order-pay.js"></script>
+	<script type="text/javascript" src="js/period/period-order-detail.js"></script>
 	
 	<script>
 		var _hmt = _hmt || [];
