--- a/jhj-web-user/order/order-list.html
+++ b/jhj-web-user/order/order-list.html
@@ -96,7 +96,7 @@
         <div id="period-order" style="display:none">
             <div class="period-order-temp dingdan-mokuai">
                 <p>定制订单明细</p>
-                <a href="#" class="special-color7">
+                <a href="order/period/period-order-detail.html?period_order_id={periodOrderId}" class="special-color7">
                     <div class="order-dingdan">
                         <ul class="dingdan">
                             <li>订购项目：</li>
