--- a/jhj-web-user/order/period/period-order-pay.html
+++ b/jhj-web-user/order/period/period-order-pay.html
@@ -39,7 +39,7 @@
 						</li>
 						<li>微信支付</li>
 						<li>
-							<img id="img-wxpay"  src="img/dingdan-pay/dingdan-pay1.png" alt="">
+							<img id="img-wxpay" onclick="changePayType('img-wxpay', 2)" src="img/dingdan-pay/dingdan-pay1.png" alt="">
 						</li>
 					</ul>
 					<ul id="select-alipay" class="xiadan11" style="border: 0;">
@@ -48,7 +48,7 @@
 						</li>
 						<li style="width:30%">支付宝支付</li>
 						<li style="width:48%">
-							<img id="img-alipay"  src="img/dingdan-pay/dingdan-pay2.png" alt="">
+							<img id="img-alipay" onclick="changePayType('img-alipay', 1)" src="img/dingdan-pay/dingdan-pay2.png" alt="">
 						</li>
 					</ul>
 				</div>
