-- 完善优化服务定制的下单流程

--- a/jhj-web-user/order/period/period-order.html
+++ b/jhj-web-user/order/period/period-order.html
@@ -26,7 +26,7 @@
                         <label class="label-checkbox item-content">
                         	<input type="hidden" name="id" value="{id}"/>
                             <input type="hidden" name="serviceTypeAddonsId" value="{serviceTypeAddonsId}"/>
-                            <input type="checkbox" name="serviceTypeId" value="{serviceTypeId}" {checked} />
+                            <input type="checkbox" name="serviceTypeId" value="{serviceTypeId}" {checked} {disabled} />
                             <div class="item-media"><i class="icon icon-form-checkbox"></i></div>
                             <div class="housework-1">
                                 <img src="img/taocan/jiawu-3.png" alt="">
