--- a/jhj-web-user/index.html
+++ b/jhj-web-user/index.html
@@ -28,9 +28,9 @@
 						<div class="swiper-container swiper-init swiper-1" data-pagination=".swiper-pagination">
 						    <div class="swiper-pagination"></div>
 						    <div class="swiper-wrapper">
-						      <div class="swiper-slide">
+						      <!-- <div class="swiper-slide">
 						      	<a href="active/20170501.html"><img src="img/indexthree/banner6.png" alt="" style="width: 100%; padding: 0;"></a>
-						      </div>
+						      </div> -->
 						      <div class="swiper-slide">
 						      	<a href="#"><img src="img/indexthree/banner5.jpg" alt="" style="width: 100%; padding: 0;"></a>
 						      </div>
