-- 家电清洗服务页面样式修改

--- a/jhj-web-user/active/20170504.html
+++ b/jhj-web-user/active/20170504.html
@@ -1,12 +1,18 @@
 <div data-page="20170504"  class="page">
 	<div class="page-content">
-		<div class="beijing-index">
-			<div style="width:100%;">
-				<img src="img/active/wiyi-1.jpg" alt="" class="all-img">
-				<a href="#" onclick="active_link_20170504(80, 1)"><img src="img/active/wiyi-2.jpg" alt="" class="all-img10"></a>
-	
-				<img src="img/active/wiyi-5.jpg" alt="" class="all-img10">
-			</div>
+		<div class="appliance">
+		<div class="appliance1">
+			<img src="img/active/home-logo.png" alt="">
+			<span>家电清洗价目表</span>
 		</div>
+		<div class="appliance2">
+			<a href="#" onclick="active_link_20170504(80, 1)"><img src="img/active/home-1.png" alt=""></a>
+			<a href="#" onclick="active_link_20170504(80, 1)"><img src="img/active/home-2.png" alt=""></a>
+			<a href="#" onclick="active_link_20170504(80, 1)"><img src="img/active/home-3.png" alt=""></a>
+			<a href="#" onclick="active_link_20170504(80, 1)"><img src="img/active/home-4.png" alt=""></a>
+			<a href="#" onclick="active_link_20170504(80, 1)"><img src="img/active/home-5.png" alt=""></a>
+			<a href="#" onclick="active_link_20170504(80, 1)"><img src="img/active/home-6.jpg" alt=""></a>
+		</div>
+	</div>
 	</div>
 </div>
