--- a/jhj-web-user/order/period/period-order-pay.html
+++ b/jhj-web-user/order/period/period-order-pay.html
@@ -14,7 +14,7 @@
 				</ul> -->
 				<ul class="order-pay1">
 					<li class="special-color4">支付全款金额</li>
-					<li class="special-color3" id="orderMoneyStrLi">￥0元</li>
+					<li class="special-color3" id="periodOrderMoneyStrLi">￥0元</li>
 				</ul>
 				<ul class="order-pay">
 					<li>支付方式<font color="red" style="font-size:11px">(使用余额支付才能享受会员价)</font></li>
@@ -54,7 +54,7 @@
 				</div>
 				<div class="order-xiadan">
 					<ul class="xiadan2">
-						<li class="special-color3" id="orderPayStrLi">￥0元</li>
+						<li class="special-color3" id="periodOrderPayStrLi">￥0元</li>
 					</ul>
 					<ul class="xiadan3">
 						<a href="#" id="orderPaySubmit">
