--- a/jhj-web-user/order/order-list.html
+++ b/jhj-web-user/order/order-list.html
@@ -124,7 +124,7 @@
                 <form id="period-form-{index}" class="list-block store-data">
 	                <input type="hidden" id="periodOrderStatus" name="orderStatus" value="{orderStatus}"/>
 	                <input type="hidden" id="periodServiceTypeId" name="serviceTypeId" value="{serviceTypeId}"/>
-	                <input type="hidden" id="periodOrderNo" name="orderNo" value="{orderNo}"/>
+	                <input type="hidden" id="periodOrderNo" name="orderNo" value="{periodOrderNo}"/>
 	                <input type="hidden" id="periodOrderId" name="orderId" value="{orderId}"/>
 	                <input type="hidden" id="periodOrderMoney" name="orderMoney" value="{orderMoney}"/>
 	                <input type="hidden" id="orderPrice" name="orderPrice" value="{orderPrice}"/>
