--- a/jhj-web-user/order/fiveservice/order-cus-index.html
+++ b/jhj-web-user/order/fiveservice/order-cus-index.html
@@ -29,7 +29,7 @@
                     <p class="special-color9">套餐三</p>
                     <div class="dingzhi-list1-1-1">
                         <img src="img/taocan/taocan-list4.jpg" alt="">
-                        <p>星级·品质生活套餐</p>
+                        <p>星级·轻奢生活套餐</p>
                     </div>
                     <p class="special-color10">￥1690元起</p>
                 </div>
@@ -39,7 +39,7 @@
                     <p class="special-color9">套餐四</p>
                     <div class="dingzhi-list1-1-1">
                         <img src="img/taocan/taocan-list5.jpg" alt="">
-                        <p>星级·品质生活套餐</p>
+                        <p>星级·乐享生活套餐</p>
                     </div>
                     <p class="special-color10">￥780元起</p>
                 </div>
