-- 修正两个js 同一个方法名称的问题

--- a/jhj-web-user/order/period/period-order-pay.html
+++ b/jhj-web-user/order/period/period-order-pay.html
@@ -30,7 +30,7 @@
 							<p class="special-color3"><a href="user/charge/mine-charge-list.html" class="special-color2">充值立享优惠》</a></p>
 						</li>
 						<li style="width: 30%;">
-							<img id="img-restpay" onclick="changePayType('img-restpay', 0)" src="img/dingdan-pay/dingdan-pay2.png" alt="">
+							<img id="img-restpay" onclick="changePeriodPayType('img-restpay', 0)" src="img/dingdan-pay/dingdan-pay2.png" alt="">
 						</li>
 					</ul>
 					<ul id="select-wxpay" class="xiadan11">
@@ -39,7 +39,7 @@
 						</li>
 						<li>微信支付</li>
 						<li>
-							<img id="img-wxpay" onclick="changePayType('img-wxpay', 2)" src="img/dingdan-pay/dingdan-pay1.png" alt="">
+							<img id="img-wxpay" onclick="changePeriodPayType('img-wxpay', 2)" src="img/dingdan-pay/dingdan-pay1.png" alt="">
 						</li>
 					</ul>
 					<ul id="select-alipay" class="xiadan11" style="border: 0;">
@@ -48,7 +48,7 @@
 						</li>
 						<li style="width:30%">支付宝支付</li>
 						<li style="width:48%">
-							<img id="img-alipay" onclick="changePayType('img-alipay', 1)" src="img/dingdan-pay/dingdan-pay2.png" alt="">
+							<img id="img-alipay" onclick="changePeriodPayType('img-alipay', 1)" src="img/dingdan-pay/dingdan-pay2.png" alt="">
 						</li>
 					</ul>
 				</div>
