--修正结算部分浮动效果

--- a/jhj-web-user/order/period/period-order.html
+++ b/jhj-web-user/order/period/period-order.html
@@ -1,22 +1,23 @@
 <div data-page="period-order" class="page">
+    <div class="housework1 floating-button color-pink">
+        <div class="housework1-1">
+            <div class="housework1-1-one" id="period-price">定制价：<span>0</span>元</div>
+            <div class="housework1-1-two">
+                <p class="housework1-1-two-1" id="total-price">总价：<span>0</span>元</p>
+                <p id="total-pprice">为您节省：<span>0</span>元</p>
+            </div>
+        </div>
+        <a href="#">
+            <div id="balance-account" class="housework1-2">结算</div>
+        </a>
+    </div>
     <div id="indexPageContentDiv" class="page-content">
         <div class="beijing-index">
             <div id="period-order-div">
 
             </div>
 			<div class="kongdiv" />
-            <div class="housework1">
-                <div class="housework1-1">
-                    <div class="housework1-1-one" id="period-price">定制价：<span>0</span>元</div>
-                    <div class="housework1-1-two">
-                        <p class="housework1-1-two-1" id="total-price">总价：<span>0</span>元</p>
-                        <p id="total-pprice">为您节省：<span>0</span>元</p>
-                    </div>
-                </div>
-                <a href="#">
-                    <div id="balance-account" class="housework1-2">结算</div>
-                </a>
-            </div>
+
         </div>
 
         <div class="period-order-temp" style="display:none;">
