--修正提交订单付浮动效果
--添加支付方式页面支付提示

--- a/jhj-web-user/order/period/period-order-confirm.html
+++ b/jhj-web-user/order/period/period-order-confirm.html
@@ -1,4 +1,10 @@
 <div data-page="period-order-confirm" class="page">
+    <div class="housework10 floating-button color-pink">
+        <div class="housework10-1">
+            总价:<span id="totalMoney">0</span>元
+        </div>
+        <div id="save-period-order" class="housework10-2">提交订单</div>
+    </div>
     <div id="indexPageContentDiv" class="page-content">
         <div class="beijing-index">
             
@@ -27,12 +33,7 @@
             </div>
             
             <div class="kongdiv" />
-            <div class="housework10">
-				<div class="housework10-1">
-					总价:<span id="totalMoney">0</span>元
-				</div>
-				<div id="save-period-order" class="housework10-2">提交订单</div>
-			</div>
+
         </div>
 
         <div class="period-order-temp1" style="display:none;">
