--- a/jhj-web-user/order/period/period-order-pay.html
+++ b/jhj-web-user/order/period/period-order-pay.html
@@ -52,6 +52,12 @@
 						</li>
 					</ul>
 				</div>
+				<ul class="order-pay order-tip">
+					<li>
+						支付提示：
+						由于支付平台限制，单笔超过3000元需到充值页面进行分次充值，充值后使用余额支付
+					</li>
+				</ul>
 				<div class="order-xiadan">
 					<ul class="xiadan2">
 						<li class="special-color3" id="periodOrderPayStrLi">￥0元</li>
