--- a/jhj-web-user/order/period/period-order-confirm.html
+++ b/jhj-web-user/order/period/period-order-confirm.html
@@ -1,14 +1,16 @@
 <div data-page="period-order-confirm" class="page">
-    <div class="housework10 floating-button color-pink">
-        <div class="housework10-1">
-            总价:<span id="totalMoney">0</span>元
+    <a href="#" class="housework10 floating-button color-pink">
+        <div>
+            <div class="housework10-1">
+                总价:<span id="totalMoney">0</span>元
+            </div>
+            <div id="save-period-order" class="housework10-2">提交订单</div>
         </div>
-        <div id="save-period-order" class="housework10-2">提交订单</div>
-    </div>
+    </a>
     <div id="indexPageContentDiv" class="page-content">
         <div class="beijing-index">
-            
-			
+
+
             <div class="order-pay">
                 <li>选择地址</li>
             </div>
@@ -31,8 +33,8 @@
             <div id="period-order-list">
 
             </div>
-            
-            <div class="kongdiv" />
+
+            <div class="kongdiv" ></div>
 
         </div>
 
@@ -77,4 +79,5 @@
             </div>
         </div>
     </div>
+
 </div>
